--- a/wxapp/shopping-car/app.json
+++ b/wxapp/shopping-car/app.json
@@ -1,8 +1,10 @@
 {
   "pages": [
-    "pages/cart/cart",
     "pages/index/index",
-    "pages/category/category"
+    "pages/user/user",
+    "pages/cart/cart",
+    "pages/category/category",
+    "pages/address/address"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -38,7 +40,7 @@
         "text": "购物车"
       },
       {
-        "pagePath": "pages/index/index",
+        "pagePath": "pages/user/user",
         "iconPath": "image/42.png",
         "selectedIconPath": "image/41.png",
         "text": "我的"
