--- a/vue-learn/vue-to-npm/use-et-verify-code/package.json
+++ b/vue-learn/vue-to-npm/use-et-verify-code/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "et-verify-code",
+  "name": "use-et-verify-code",
   "version": "0.1.0",
-  "main": "lib/et-verify-code.umd.min.js",
-  "author": "wn",
-  "keywords": [
-    "vue",
-    "verify-code",
-    "et-verify-code"
-  ],
-  "private": false,
+  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lib": "vue-cli-service build --target lib --name et-verify-code --dest lib ./src/main.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "et-verify-code": "file:et-verify-code-0.1.0.tgz",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -30,13 +23,23 @@
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
   },
-  "repository": {
-    "type": "git",
-    "url": "git地址"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   },
-  "license": "MIT",
-  "description": "## Project setup ``` npm install ```",
-  "directories": {
-    "lib": "lib"
-  }
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
