--- a/vue-learn/vue-to-npm/use-et-verify-code/package.json
+++ b/vue-learn/vue-to-npm/use-et-verify-code/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "et-verify-code": "file:et-verify-code-0.1.0.tgz",
+    "gyh-verify-code": "^0.1.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
